--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "jtest": "^0.0.1"
   }
 }
