--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.4.4",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "router": "^1.3.8"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "jtest": "^0.0.1"
   }
 }
